--- a/style.css
+++ b/style.css
@@ -11,8 +11,7 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: inherit;
-    /* border: 1px solid black; */
+    box-sizing: border-box;
 }
 
 body {
@@ -23,39 +22,51 @@ body {
     background-position: bottom;
 }
 
+/*----------------------- nav_bar -------------------*/
+
 .nav__bar {
-    width: 90%;
+    width: 94%;
+    position: absolute;
     height: 4.5rem;
-    margin: 3rem 0 0 3rem;
+    top: 3rem;
+    right: 0;
+
     display: flex;
     justify-content: center;
 }
 
 .nav__bar img {
-    margin: 0.9rem 0 0 0;
+    margin-right: 2rem;
+    margin-top: 0.9rem;
     width: 3rem;
     height: 3rem;
 }
 
 .nav__bar hr {
-    width: 35%;
-    margin-left: 2rem;
+    margin-right: -2rem;
+    width: 40%;
     height: 0.01em;
+    z-index: 1;
+
     align-self: center;
     background-color: white;
 }
 
 .menu__options {
     width: 65%;
-    margin-right: -5.5rem;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
+    gap: 2rem;
     align-items: center;
+
     color: var(--sub-headings);
     background-color: rgba(255, 255, 255, 0.15);
     backdrop-filter: blur(15px);
 }
 
 .menu__options span {
+    margin: 0.5rem;
     color: var(--headings);
 }
+
+/*------------------*/
