--- a/style.css
+++ b/style.css
@@ -157,13 +157,14 @@ body {
 }
 
 .destination__title span {
-    color: rgb(81, 81, 81);;
+    color: rgb(81, 81, 81);
     padding-right: 0.5rem;
 }
 
 /*---------------IMAGE---------------------*/
 
 .destination__image {
+    width: 28rem;
     margin-top: 5.5rem;
     margin-left: 13rem;
 }
@@ -171,9 +172,60 @@ body {
 /*--------------DESTINATION_INFO---------------*/
 
 .destination__info {
-    width: 30rem;
-    margin-top: -30rem;
+    width: 23rem;
+    margin-top: -27rem;
     margin-left: 50rem;
-    padding-bottom: 20rem;
+    padding-bottom: 10rem;
 }
 
+.destination__info ul {
+    list-style: none;
+    display: flex;
+    gap: 2rem;
+
+    color: var(--sub-headings);
+    font-family: 'Barlow Condensed';
+    letter-spacing: 2.35px;
+}
+
+.destination__info h1 {
+    margin: 2rem 0;
+    font-size: 95px;
+    font-weight: 100;
+    font-family: 'Bellefair';
+    color: var(--headings);
+}
+
+.destination__info p {
+    font-size: 18px;
+    margin-bottom: 2rem;
+    font-family: 'Barlow Condensed';
+    line-height: 1.5rem;
+    color: var(--sub-headings);
+}
+
+.destination__info hr {
+    background-color: rgba(8, 8, 8, 0.5);
+}
+
+/*------------DESTINATION__DETAILS---------------*/
+
+.destination__details {
+    display: flex;
+    gap: 3rem;
+    margin-top: 1rem;
+    font-family: 'Barlow Condensed';
+    color: var(--sub-headings);
+}
+
+.destination__details h4 {
+    font-size: 11px;
+    letter-spacing: 2px;
+    padding-bottom: 0.3rem;
+}
+
+.destination__details span {
+    font-family: 'Bellefair';
+    font-size: 24px;
+    color: var(--headings);
+}
