--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@
 
 body {
     min-width: 100vh;
+    min-height: 100vh;
     background-image: url(./src/images/home/background-home-desktop.jpg);
     background-repeat: no-repeat;
     background-size: cover;
