working on change destination data

--- a/style.css
+++ b/style.css
@@ -78,6 +78,10 @@ body {
 
 /*------------------space__article__home -------------------*/
 
+/* .main_section {
+    max-width: 1440px;
+} */
+
 .home__info {
     width: 25rem;
     height: fit-content;
