--- a/style.css
+++ b/style.css
@@ -235,3 +235,65 @@ body {
     font-size: 24px;
     color: var(--headings);
 }
+
+/*---------------------- CREW -------------------------*/
+
+.slider {
+    display: flex;
+    justify-content: end;
+}
+
+.slide--1 {
+    width: 90%;
+    display: flex;
+}
+
+.biografia {
+    width: 40rem;
+    margin: 12rem 0 0 2rem;
+}
+
+.biografia h4 {
+    margin-bottom: 1rem;
+    color: rgb(81, 81, 81);
+    font-size: 20px;
+    font-family: 'Bellefair';
+}
+
+.biografia h2 {
+    color: var(--headings);
+    font-family: 'Bellefair';
+    font-size: 35px;
+}
+
+.biografia blockquote {
+    width: 50%;
+    font-size: 18px;
+    font-family: 'Barlow Condensed';
+    line-height: 1.5rem;
+    color: var(--sub-headings);
+}
+
+.slide--1 img {
+    margin-left: 1rem;
+    margin-top: -2rem;
+}
+
+.dots {
+    position: absolute;
+    top: 50rem;
+    left: 10rem;
+    display: flex;
+}
+
+.dots__dot {
+    border: none;
+    background-color: #b9b9b9;
+    opacity: 0.7;
+    height: 1rem;
+    width: 1rem;
+    border-radius: 50%;
+    margin-right: 1.75rem;
+    cursor: pointer;
+    transition: all 0.5s;
+}
