--- a/style.css
+++ b/style.css
@@ -263,35 +263,39 @@ body {
 .biografia h2 {
     color: var(--headings);
     font-family: 'Bellefair';
-    font-size: 35px;
+    font-size: 45px;
+    font-weight: 100;
 }
 
 .biografia blockquote {
-    width: 50%;
-    font-size: 18px;
+    width: 55%;
+    margin-top: 2rem;
+    font-size: 16px;
     font-family: 'Barlow Condensed';
     line-height: 1.5rem;
+    letter-spacing: 1px;
     color: var(--sub-headings);
 }
 
 .slide--1 img {
+    width: 31rem;
+    height: 40rem;
     margin-left: 1rem;
     margin-top: -2rem;
 }
 
 .dots {
-    position: absolute;
-    top: 50rem;
-    left: 10rem;
+    margin: 5rem 0 0 0;
+    padding-bottom: 5rem;
     display: flex;
 }
 
 .dots__dot {
     border: none;
-    background-color: #b9b9b9;
+    background-color: var(--headings);
     opacity: 0.7;
-    height: 1rem;
-    width: 1rem;
+    height: 0.7rem;
+    width: 0.7rem;
     border-radius: 50%;
     margin-right: 1.75rem;
     cursor: pointer;
