--- a/style.css
+++ b/style.css
@@ -356,6 +356,20 @@ body {
 
 /*---------------------- CREW -------------------------*/
 
+.crew__title {
+    margin-top: 5.5rem;
+    margin-left: 10rem;
+    color: var(--headings);
+    font-family: 'Barlow Condensed';
+    font-size: 28px;
+    letter-spacing: 4.35px;
+}
+
+.crew__title span {
+    color: rgb(81, 81, 81);
+    padding-right: 0.5rem;
+}
+
 .slider {
     display: flex;
     justify-content: end;
@@ -416,6 +430,42 @@ body {
     border-radius: 50%;
     margin-right: 1.75rem;
     cursor: pointer;
+}
+
+@media (max-width: 769px) {
+    .crew__title {
+        margin-left: 0;
+    }
+
+    .slider {
+        justify-content: center;
+    }
+
+    .slide--1 {
+        display: block;
+    }
+
+    .slide--1 img {
+        width: 25rem;
+        height: 30rem;
+        margin-left: 0;
+        margin-top: 0;
+    }
+
+    .biografia {
+        width: fit-content;
+        margin: 3rem auto;
+    }
+
+    .biografia blockquote {
+        width: 80%;
+        margin: 1rem auto;
+    }
+
+    .dots {
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 /*----------------- TECHNOLOGY ------------------*/
