--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
 
     display: flex;
     justify-content: center;
+    overflow: hidden;
 }
 
 .nav__bar .logo {
@@ -55,6 +56,7 @@ body {
     justify-content: center;
     align-items: center;
     gap: 2rem;
+    overflow: hidden;
 
     color: var(--headings);
     font-family: 'Barlow Condensed';
@@ -157,8 +159,11 @@ body {
 
 @media (max-width: 680px) {
     .menu__options {
+        position: fixed;
         display: none;
         min-height: 110vh;
+        top: 0;
+        right: 0;
     }
     
     .menu__options img {
@@ -547,14 +552,14 @@ body {
     margin: 12rem 0 0 2rem;
 }
 
-.biografia h4 {
+.biografia .role {
     margin-bottom: 1rem;
     color: rgb(81, 81, 81);
     font-size: 20px;
     font-family: 'Bellefair';
 }
 
-.biografia h2 {
+.biografia .name {
     color: var(--headings);
     font-family: 'Bellefair';
     font-size: 45px;
@@ -630,6 +635,60 @@ body {
         align-items: center;
     }
 }
+
+@media (max-width: 680px) {
+    .crew__title {
+        margin-top: 2rem;
+        font-size: 18px;
+    }
+
+    .slider {
+        justify-content: center;
+        overflow: hidden;
+    }
+
+    .slide--1 {
+        display: flex;
+        flex-flow: column-reverse wrap;
+    }
+
+    .slide--1 img {
+        width: 15rem;
+        height: 17rem;
+        margin: 3rem auto;
+
+        border-bottom: 1px solid var(--headings);
+    }
+
+    .biografia {
+        display: flex;
+        flex-flow: column-reverse wrap;
+        width: fit-content;
+        margin: auto;
+    }
+    
+    .biografia .name {
+        font-size: 28px;
+    }
+
+    .biografia blockquote {
+        width: 90%;
+        margin: 0 auto 3rem auto;
+    }
+
+    .dots {
+        justify-content: center;
+        align-items: center;
+
+        margin: auto auto 2rem auto;
+        padding-bottom: 0;
+    }
+
+    .dots__dot:last-child {
+        margin-right: 0;
+    }
+}
+
 
 /*----------------- TECHNOLOGY ------------------*/
 
