--- a/style.css
+++ b/style.css
@@ -803,3 +803,41 @@ body {
         margin: 1rem auto 5rem auto;
     }
 }
+
+@media (max-width: 680px) {
+    .tech__title {
+        margin: 2rem auto;
+        font-size: 18px;
+    }
+
+    .tech_dots {
+        margin: 2rem auto;
+    }
+
+    .options {
+        height: 3.5rem;
+        width: 3.5rem;
+        margin-top: 0;
+        font-size: 25px;
+    }
+
+    .description__container {
+        flex-flow: column;
+        align-items: center;
+        margin: auto;
+    }
+    
+    .description h2 {
+        font-size: 28px;
+    }
+
+    .description {
+        margin: auto;
+    }
+
+    .description blockquote {
+        width: 100%;
+        font-size: 17px;
+        margin: 1rem auto 5rem auto;
+    }
+}
