--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@
 }
 
 body {
+    display: flex;
+    flex-wrap: wrap;
     min-width: 100vh;
     min-height: 100vh;
     background-repeat: no-repeat;
@@ -91,6 +93,10 @@ body {
     cursor: pointer;
 }
 
+.main_section {
+    width: 90%;
+    margin: auto;
+}
 
 @media (min-width: 1441px) {
     .nav__bar {
@@ -130,7 +136,7 @@ body {
 
 @media (max-width: 769px) {
     .nav__bar {
-        width: 100%;
+        width: 99%;
         margin-left: 0;
         margin-top: 0;
         flex-flow: row wrap;
@@ -185,7 +191,6 @@ body {
     }
 
     .hamburger_menu {
-        margin-right: 1rem;
         display: inline-block;
     }
 }
