--- a/style.css
+++ b/style.css
@@ -201,6 +201,7 @@ body {
 }
 
 .home__info {
+    width: 33%;
     height: fit-content;
     margin-top: 15rem;
     margin-left: 10rem;
@@ -226,7 +227,7 @@ body {
 .home__info .home_description {
     font-size: 20px;
     font-family: 'Barlow Condensed';
-    line-height: 1.5rem;
+    line-height: 2rem;
     color: var(--sub-headings);
     padding-bottom: 5rem;
 }
