--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
 }
 
 body {
+    min-height: 100vh;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: bottom;
